SourceMetaData/src/objects/Attachment_To_Document_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>A list of record types that should have their attachments copied into documents automatically.</description>
    <fields>
        <fullName>Document_Folder_Name__c</fullName>
        <description>The name of the document folder that should attachments should be copied too</description>
        <inlineHelpText>The name of the document folder that should attachments should be copied too</inlineHelpText>
        <label>Document Folder Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The name of the object that should have attachments copied to a doc folder</description>
        <inlineHelpText>The name of the object that should have attachments copied to a doc folder</inlineHelpText>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>The developer name of the record type that should have its attachments copied across to documents</description>
        <inlineHelpText>The developer name of the record type that should have its attachments copied across to documents</inlineHelpText>
        <label>Record Type Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Attachment To Document Mapping</label>
</CustomObject>